# ssEinterpolator

./: .gitignore  LICENSE  README.md  config  pyproject.toml
src/: __init__.py  interpolation.py  io.py  visualization.py
src/ssEinterpolator/: __init__.py  data.py  interpolation.py  rom.py  standrtize_data.py  utils.py  visualization.py
src/ssEinterpolator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
